--- a/app/templates/admin/adminManageExam.html
+++ b/app/templates/admin/adminManageExam.html
@@ -213,7 +213,7 @@
                                         <strong>: {{ va.venueNumber }} (Capacity Use: {{ va.capacity }})</strong><br>
                                     {% endfor %}
                                 {% else %}
-                                    <strong>: N/A</strong>
+                                    <strong>: None</strong>
                                 {% endif %}
                             </div>
                         </div>
