--- a/app/templates/admin/adminManageInvigilationReport.html
+++ b/app/templates/admin/adminManageInvigilationReport.html
@@ -98,8 +98,8 @@
                                     <div>Exam Period</div><div><strong>: {{ (grouped[0].report.exam.examEndTime - grouped[0].report.exam.examStartTime).seconds // 3600 }}h {{ ((grouped[0].report.exam.examEndTime - grouped[0].report.exam.examStartTime).seconds % 3600) // 60 }}m</strong></div>
                                     <div>Exam Venue(s)</div>
                                     <div>
-                                        {% if row.venue_availabilities %}
-                                            {% for va in row.venue_availabilities %}
+                                        {% if grouped[0].venue_availabilities %}
+                                            {% for va in grouped[0].venue_availabilities %}
                                                 <strong>: {{ va.venueNumber }} (Capacity Use: {{ va.capacity }})</strong><br>
                                             {% endfor %}
                                         {% else %}
