--- a/app/templates/user/userInvigilationReport.html
+++ b/app/templates/user/userInvigilationReport.html
@@ -65,7 +65,7 @@
                                     <div>Exam Period</div><div><strong>: {{ (att.report.exam.examEndTime - att.report.exam.examStartTime).seconds // 3600 }}h {{ ((att.report.exam.examEndTime - att.report.exam.examStartTime).seconds % 3600) // 60 }}m</strong></div>
                                     <div>Exam Venue(s)</div>
                                     <div>
-                                        {% if att.venue_availabilities %}
+                                        {% if att.report.exam.venue_availabilities %}
                                             {% for va in att.venue_availabilities %}
                                                 <strong>: {{ va.venueNumber }} (Capacity Use: {{ va.capacity }})</strong><br>
                                             {% endfor %}
