--- a/app/templates/admin/adminManageInvigilationReport.html
+++ b/app/templates/admin/adminManageInvigilationReport.html
@@ -99,7 +99,7 @@
                                     <div>Exam Venue(s)</div>
                                     <div>
                                         {% if grouped[0].report.exam.venue_availabilities %}
-                                            {% for va in grouped[0].venue_availabilities %}
+                                            {% for va in grouped[0].report.exam.venue_availabilities %}
                                                 <strong>: {{ va.venueNumber }} (Capacity Use: {{ va.capacity }})</strong><br>
                                             {% endfor %}
                                         {% else %}
