--- a/app/templates/admin/adminManageExam.html
+++ b/app/templates/admin/adminManageExam.html
@@ -126,7 +126,7 @@
                         <select name="venue[]" id="editVenue" class="venue-dropdown" required>
                             <option value="" disabled selected>Select Exam Venue</option>
                             {% for venue in venue_data %}
-                                <option value="{{ venue.venueNumber }}">[Capacity: {{ venue.venueCapacity }}] - {{ venue.venueNumber }}</option>
+                                <option value="{{ venue.venueNumber }}">{{ venue.venueNumber }} ({{ venue.capacity }}){% if not loop.last %}, {% endif %}</option>
                             {% endfor %}
                         </select>
                         <button type="button" id="addVenueBtn" class="add-btn" 
