--- a/app/templates/admin/adminManageStaff.html
+++ b/app/templates/admin/adminManageStaff.html
@@ -220,8 +220,14 @@
 <div class="menu-section">
     <div style="display: flex; justify-content: space-between; align-items: center;">
         <h2>List of Staff</h2>
-        <div class="button-wrapper">
-            <button id="generatePDF" style="background-color: black;">Download as PDF</button>
+        <div style="display: flex; align-items: center; gap: 10px;">
+            <div style="position: relative;">
+                <input type="text" id="search_staff" name="search_staff" placeholder="Search Staff..." value="{{ search_staff }}" style="border-radius: 6px; width: 100%;">
+                <i class="fa fa-search" style="position: absolute; right: 10px; top: 50%; transform: translateY(-50%);"></i>
+            </div>
+            <div class="button-wrapper">
+                <button id="generatePDF" style="background-color: black;">Download as PDF</button>
+            </div>
         </div>
     </div>
 
