--- a/app/templates/admin/adminManageVenue.html
+++ b/app/templates/admin/adminManageVenue.html
@@ -96,10 +96,17 @@
 <div class="menu-section">
     <div style="display: flex; justify-content: space-between; align-items: center;">
         <h2>List of Venue</h2>
-        <div class="button-wrapper">
-            <button id="generatePDF" style="background-color: black;">Download as PDF</button>
+        <div style="display: flex; align-items: center; gap: 10px;">
+            <div style="position: relative;">
+                <input type="text" id="search_venue" name="search_venue" placeholder="Search Venue..." value="{{ search_venue }}" style="border-radius: 6px; width: 100%;">
+                <i class="fa fa-search" style="position: absolute; right: 10px; top: 50%; transform: translateY(-50%);"></i>
+            </div>
+            <div class="button-wrapper">
+                <button id="generatePDF" style="background-color: black;">Download as PDF</button>
+            </div>
         </div>
     </div>
+
     <table class="user-data-table"> 
         <thead>
             <tr>
