--- a/app/templates/admin/adminManageCourse.html
+++ b/app/templates/admin/adminManageCourse.html
@@ -222,7 +222,7 @@
         <h2>List of Courses</h2>
         <div style="display: flex; align-items: center; gap: 10px;">
             <div style="position: relative;">
-                <input type="text" id="search_courses" name="search_courses" placeholder="Search Courses..." value="{{ search_courses }}" style="border-radius: 6px; width: 100%;">
+                <input type="text" id="search_courses" name="search_courses" placeholder="Search..." value="{{ search_courses }}" style="border-radius: 6px; width: 100%;">
                 <i class="fa fa-search" style="position: absolute; right: 10px; top: 50%; transform: translateY(-50%);"></i>
             </div>
             <div class="button-wrapper">
@@ -232,7 +232,7 @@
     </div>
 
     <div class="user-table-container">
-        <table class="user-data-table">
+        <table class="user-data-table" id="manageCourse">
             <thead>
                 <tr>
                     <th>No</th>
