--- a/app/templates/admin/adminManageDepartment.html
+++ b/app/templates/admin/adminManageDepartment.html
@@ -144,7 +144,7 @@
         <h2>List of Departments</h2>
         <div style="display: flex; align-items: center; gap: 10px;">
             <div style="position: relative;">
-                <input type="text" id="search_department" name="search_department" placeholder="Search department..." value="{{ search_department }}" style="border-radius: 6px; width: 100%;">
+                <input type="text" id="search_department" name="search_department" placeholder="Search..." value="{{ search_department }}" style="border-radius: 6px; width: 100%;">
                 <i class="fa fa-search" style="position: absolute; right: 10px; top: 50%; transform: translateY(-50%);"></i>
             </div>
             <div class="button-wrapper">
@@ -154,7 +154,7 @@
     </div>
 
     <div class="user-table-container">
-        <table class="user-data-table">
+        <table class="user-data-table" id="manageDepartment">
             <thead>
                 <tr>
                     <th>No</th>
