--- a/app/templates/admin/adminManageInvigilationReport.html
+++ b/app/templates/admin/adminManageInvigilationReport.html
@@ -53,7 +53,7 @@
         <h3>List of Lecturer Invigilation Report</h3>
         <div style="display: flex; align-items: center; gap: 10px;">
             <div style="position: relative;">
-                <input type="text" id="search_report" name="search_report" placeholder="Search Invigilation Report..." value="{{ search_report }}" style="border-radius: 6px; width: 100%;">
+                <input type="text" id="search_report" name="search_report" placeholder="Search..." value="{{ search_report }}" style="border-radius: 6px; width: 100%;">
                 <i class="fa fa-search" style="position: absolute; right: 10px; top: 50%; transform: translateY(-50%);"></i>
             </div>
             <div class="button-wrapper">
@@ -63,7 +63,7 @@
     </div>
 
     <div class="user-table-container">
-        <table class="user-data-table">
+        <table class="user-data-table" id="manageInvigilationReport">
             <thead>
                 <tr>
                     <th>Exam ID</th>
