--- a/app/templates/admin/adminManageCourse.html
+++ b/app/templates/admin/adminManageCourse.html
@@ -222,7 +222,7 @@
         <h2>List of Courses</h2>
         <div style="display: flex; align-items: center; gap: 10px;">
             <div style="position: relative;">
-                <input type="text" id="searchInput" name="search_courses" placeholder="Search..." value="{{ search_courses }}" style="border-radius: 6px; width: 100%; padding-right: 30px;">
+                <input type="text" id="searchInput" name="search_courses" placeholder="Search..." value="{{ search_courses }}" style="border-radius: 6px; width: 100%;">
                 <i class="fa fa-search" id="searchBtn" style="position: absolute; right: 10px; top: 50%; transform: translateY(-50%); cursor: pointer;"></i>
             </div>
             <div class="button-wrapper">
